--- a/test/Vagrantfile
+++ b/test/Vagrantfile
@@ -3,6 +3,6 @@ Vagrant.configure(2) do |config|
 
     # Disabled VirtualBox Guest updates
     if Vagrant.has_plugin?("vagrant-vbguest")
-#      config.vbguest.auto_update = false
+      config.vbguest.auto_update = false
     end
 end
