--- a/conf/kube-proxy.service
+++ b/conf/kube-proxy.service
@@ -7,8 +7,7 @@ Wants=kube-api-server.service
 ExecStart=/usr/bin/hyperkube proxy \
 --proxy-mode=userspace \
 --resource-container= \
---master=127.0.0.1:8080 \
---v=2
+--master=127.0.0.1:8080
 Restart=always
 RestartSec=10
 
