--- a/conf/kube-dashboard.yml
+++ b/conf/kube-dashboard.yml
@@ -28,7 +28,7 @@ spec:
           # Uncomment the following line to manually specify Kubernetes API server Host
           # If not specified, Dashboard will attempt to auto discover the API server and connect
           # to it. Uncomment only if the default does not work.
-          - --apiserver-host=http://10.10.0.2:8080
+          # - --apiserver-host=http://10.10.0.2:8080
         livenessProbe:
           httpGet:
             path: /
