--- a/conf/kube-apiserver.service
+++ b/conf/kube-apiserver.service
@@ -10,8 +10,9 @@ RestartSec=10
 ExecStart=/usr/bin/hyperkube apiserver \
 --service-cluster-ip-range=${PORTAL_CIRD} \
 --insecure-bind-address=0.0.0.0 \
---etcd-servers=http://127.0.0.1:4001 \
+--etcd-servers=http://127.0.0.1:2379 \
 --admission-control=AlwaysAdmit,ServiceAccount \
+--storage-backend=etcd3 \
 
 [Install]
 WantedBy=multi-user.target
