--- a/example/Vagrantfile
+++ b/example/Vagrantfile
@@ -1,3 +1,9 @@
 Vagrant.configure(2) do |config|
-  config.vm.box = "flixtech/kubernetes"
+  config.vm.box = "debian/stretch64"
+end
+
+vboxVersion = `vboxmanage --version`
+
+if Gem::Version.new(vboxVersion) < Gem::Version.new('5.1')
+  throw "VirtualBox version too old. Please upgrade to 5.1"
 end
