--- a/conf/kube-apiserver.service
+++ b/conf/kube-apiserver.service
@@ -9,6 +9,7 @@ Restart=always
 RestartSec=10
 ExecStart=/usr/bin/hyperkube apiserver \
 --service-cluster-ip-range=${PORTAL_CIRD} \
+--cert-dir=/var/lib/kubernetes \
 --insecure-bind-address=0.0.0.0 \
 --etcd-servers=http://127.0.0.1:2379 \
 --admission-control=AlwaysAdmit,ServiceAccount \
