--- a/conf/kube-dashboard.yml
+++ b/conf/kube-dashboard.yml
@@ -1,3 +1,10 @@
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  namespace: kube-system
+  name: dashboard
+---
 kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
@@ -18,6 +25,7 @@ spec:
          version: v1.6.1
          kubernetes.io/cluster-service: "true"
     spec:
+      serviceAccountName: dashboard
       containers:
       - name: kubernetes-dashboard
         image: gcr.io/google_containers/kubernetes-dashboard-amd64:v1.6.1
@@ -25,10 +33,6 @@ spec:
         - containerPort: 9090
           protocol: TCP
         args:
-          # Uncomment the following line to manually specify Kubernetes API server Host
-          # If not specified, Dashboard will attempt to auto discover the API server and connect
-          # to it. Uncomment only if the default does not work.
-          # - --apiserver-host=http://10.10.0.2:8080
         livenessProbe:
           httpGet:
             path: /
