--- a/conf/kube-scheduler.service
+++ b/conf/kube-scheduler.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Kubernetes Scheduler
 Documentation=https://github.com/kubernetes/kubernetes
-Wants=kube-api-server.service
+Wants=kube-apiserver.service
 
 [Service]
 ExecStart=/usr/bin/hyperkube scheduler \
