--- a/test/Vagrantfile
+++ b/test/Vagrantfile
@@ -1,6 +1,8 @@
 Vagrant.configure(2) do |config|
     config.vm.box = "vagrant-kubernetes"
 
+    config.vm.synced_folder ".", "/vagrant", type: "rsync"
+
     # Disabled VirtualBox Guest updates
     if Vagrant.has_plugin?("vagrant-vbguest")
       config.vbguest.auto_update = false
