--- a/conf/kubelet.service
+++ b/conf/kubelet.service
@@ -13,7 +13,8 @@ ExecStart=/usr/bin/hyperkube kubelet \
 --address=0.0.0.0 \
 --serialize-image-pulls=false \
 --cluster-dns=${CLUSTERDNS_IP} \
---cluster-domain=${DNS_DOMAIN}
+--cluster-domain=${DNS_DOMAIN} \
+--fail-swap-on=false
 Restart=always
 RestartSec=10
 
