--- a/Vagrantfile.dist
+++ b/Vagrantfile.dist
@@ -14,6 +14,8 @@ Vagrant.configure(2) do |config|
   # This is the docker network
   config.vm.network "private_network", ip: "10.10.0.2", auto_config: false
 
+  config.vm.post_up_message = "Vagrant Kubernetes Box based on Debian. Check http://10.0.0.3 for the dashboard"
+
    config.vm.provider :virtualbox do |vb|
     # Set the vboxnet interface to promiscous mode so that the docker veth
     # interfaces are reachable
