--- a/provision/02-playbook-repartition.yml
+++ b/provision/02-playbook-repartition.yml
@@ -5,16 +5,19 @@
     - include_vars: vars.yml
   tasks:
   - shell: apt-get autoremove -y && apt-get clean && rm -rf /var/lib/apt/lists/*
-    warn: False
+    args:
+      warn: False
   - command: "swapoff /dev/sda5"
   - command: dd if=/dev/zero of=/dev/sda5 bs=64k
     ignore_errors: yes
+  - copy:
+      src: fdisk
+      dest: /fdisk
   - shell: |
-      sed -e 's/\t\([\+0-9a-zA-Z]*\)[ \t].*/\1/' | fdisk /dev/sda || true
+      sed -e 's/\t\([\+0-9a-zA-Z]*\)[ \t].*/\1/' < /fdisk | fdisk /dev/sda || true; rm /fdisk
     args:
-      stdin: "{{ lookup('file', 'fdisk') }}"
       warn: false
   - lineinfile:
       regexp: swap
-      path: /etc/fstab
+      dest: /etc/fstab
       state: absent
