--- a/provision/roles/static/tasks/main.yml
+++ b/provision/roles/static/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Overwrite Vboxnameserver because of bad performance on OSX
   lineinfile:
-    path: /etc/dhcp/dhclient.conf
+    dest: /etc/dhcp/dhclient.conf
     line: 'supersede domain-name-servers 8.8.8.8, 8.8.4.4;'
 - copy:
     content: "nameserver 8.8.8.8\nnameserver 8.8.4.4\n"
@@ -13,7 +13,7 @@
     group: systemd-journal
     mode: g+rwx
 - lineinfile:
-    path: /etc/systemd/journald.conf
+    dest: /etc/systemd/journald.conf
     line: "SystemMaxUse=256M"
 - name: Give the vagrant user full access to the journal
   user:
@@ -55,6 +55,7 @@
    - htop
    - vim
    - curl
+   - ansible
    - "docker-ce={{ DOCKER_VERSION }}~ce-0~debian"
    - bindfs # bindfs is for fixing NFS mount permissions
   apt:
@@ -78,10 +79,12 @@
 - name: Enable bash completion
   blockinfile:
     block: "{{ lookup('file', 'bash.bashrc') }}"
-    path: /etc/bash.bashrc
+    dest: /etc/bash.bashrc
 
 - name: Add dir for auth sock from vagrant
   file:
     path: /sock/
     state: directory
     owner: vagrant
+
+- include: kubernetes.yml
