--- a/Vagrantfile.dist
+++ b/Vagrantfile.dist
@@ -1,3 +1,5 @@
+require 'ipaddr'
+
 begin
     vboxVersion = `vboxmanage --version`
 
@@ -9,12 +11,35 @@ rescue
 end
 
 Vagrant.configure(2) do |config|
+  if ENV['NET_CIDR']
+    NET_CIDR = ENV['NET_CIDR']
+  else
+    NET_CIDR = '10.10.0.0/24'
+  end
+
+  if ENV['PORTAL_CIDR']
+    PORTAL_CIDR = ENV['PORTAL_CIDR']
+  else
+    PORTAL_CIDR = '10.0.0.0/24'
+  end
+
+  NETMASK = IPAddr.new('255.255.255.255').mask(NET_CIDR.split('/')[1]).to_s
+
     # Create a private network, which allows host-only access to the machine
   # using a specific IP.
   # This is the docker network
-  config.vm.network "private_network", ip: "10.10.0.2", auto_config: false
+  config.vm.network "private_network", ip: IPAddr.new(NET_CIDR.split('/')[0]).mask(NETMASK).succ.succ.to_s, netmask: NETMASK, auto_config: false
 
   config.vm.post_up_message = "Vagrant Kubernetes Box based on Debian. Check http://10.0.0.3 for the dashboard"
+
+  if ENV['NET_CIDR']
+
+  config.vm.provision "ansible_local" do |ansible|
+      ansible.playbook = "/etc/provision/playbook.yml"
+      ansible.become = true
+      ansible.compatibility_mode = "2.0"
+      ansible.raw_arguments = '--extra-vars "NET_CIDR=' + NET_CIDR + ' PORTAL_CIDR=' + PORTAL_CIDR + '"'
+    end
 
    config.vm.provider :virtualbox do |vb|
     # Set the vboxnet interface to promiscous mode so that the docker veth
