--- a/Vagrantfile.dist
+++ b/Vagrantfile.dist
@@ -24,15 +24,17 @@ Vagrant.configure(2) do |config|
   end
 
   NETMASK = IPAddr.new('255.255.255.255').mask(NET_CIDR.split('/')[1]).to_s
+  IP = IPAddr.new(NET_CIDR.split('/')[0]).mask(NETMASK).succ.succ.to_s
 
     # Create a private network, which allows host-only access to the machine
   # using a specific IP.
   # This is the docker network
-  config.vm.network "private_network", ip: IPAddr.new(NET_CIDR.split('/')[0]).mask(NETMASK).succ.succ.to_s, netmask: NETMASK, auto_config: false
+  config.vm.network "private_network", ip: IP, netmask: NETMASK, auto_config: false
 
-  config.vm.post_up_message = "Vagrant Kubernetes Box based on Debian. Check http://10.0.0.3 for the dashboard"
+  DASHBOARD_IP = IPAddr.new(PORTAL_CIDR.split('/')[0]).succ.succ.succ.to_s
 
-  if ENV['NET_CIDR']
+  route_msg = "sudo ip route add " + PORTAL_CIDR + " via " + IP
+  config.vm.post_up_message = "Vagrant Kubernetes Box based on Debian. Check http://" + DASHBOARD_IP + " for the dashboard " + route_msg
 
   config.vm.provision "ansible_local" do |ansible|
       ansible.playbook = "/etc/provision/playbook.yml"
