--- a/Vagrantfile.dist
+++ b/Vagrantfile.dist
@@ -1,13 +1,19 @@
 require 'ipaddr'
 
-begin
-    vboxVersion = `vboxmanage --version`
+class VBoxError < Vagrant::Errors::VagrantError
+  error_message("VirtualBox version too old. Please upgrade to at least 5.1")
+end
 
-    if Gem::Version.new(vboxVersion) < Gem::Version.new('5.1')
-      throw "VirtualBox version too old. Please upgrade to 5.1"
-    end
+begin
+  vbox_version = Vagrant::Util::Subprocess.execute("vboxmanage", "--version").stdout
+
+  if Gem::Version.new(vbox_version) < Gem::Version.new('5.1')
+    raise VBoxError
+  end
+rescue VBoxError => e
+  raise e
 rescue
-    print "Could not determine Virtual Box version. Continuing"
+  print "Could not determine Virtual Box version. You might be running an outdated version.\n"
 end
 
 Vagrant.configure(2) do |config|
@@ -34,7 +40,7 @@ Vagrant.configure(2) do |config|
   DASHBOARD_IP = IPAddr.new(PORTAL_CIDR.split('/')[0]).succ.succ.succ.to_s
 
   route_msg = "sudo ip route add " + PORTAL_CIDR + " via " + IP
-  config.vm.post_up_message = "Vagrant Kubernetes Box based on Debian. Check http://" + DASHBOARD_IP + " for the dashboard " + route_msg
+  config.vm.post_up_message = "Vagrant Kubernetes Box based on Debian.\nCheck http://dashboard.kube-system.local for the dashboard.\nDon't forget to add the appropiate route: " + route_msg
 
   config.vm.provision "ansible_local" do |ansible|
       ansible.playbook = "/etc/provision/playbook.yml"
