--- a/provision/files/provision/dynamic/templates/kube-dashboard.yml
+++ b/provision/files/provision/dynamic/templates/kube-dashboard.yml
@@ -6,7 +6,7 @@ metadata:
   name: dashboard
 ---
 kind: Deployment
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 metadata:
   labels:
     k8s-app: kubernetes-dashboard
