--- a/provision/files/provision/dynamic/templates/kube-dns.yml
+++ b/provision/files/provision/dynamic/templates/kube-dns.yml
@@ -19,13 +19,13 @@ data:
     .:53 {
         errors
         health
-        kubernetes {{ DNS_DOMAIN }} in-addr.arpa ip6.arpa {
+        kubernetes {{ CLUSTER_DOMAIN }} in-addr.arpa ip6.arpa {
             pods insecure
             upstream
             fallthrough in-addr.arpa ip6.arpa
         }
         prometheus :9153
-        proxy . /etc/resolv.conf
+        forward . /etc/resolv.conf
         cache 30
     }
 ---
@@ -57,7 +57,7 @@ spec:
           operator: "Exists"
       containers:
       - name: coredns
-        image: coredns/coredns:1.0.6
+        image: coredns/coredns:1.1.2
         args: [ "-conf", "/etc/coredns/Corefile" ]
         volumeMounts:
         - name: config-volume
